# hs-infomap

./: .gitignore  CHANGELOG.md  LICENSE  codebooks.cabal
app/: Main.hs
lib/: Example.hs  MyLib copy.hs  MyLib.hs
lib/Data/: InfoMap.hs
lib/Data/InfoMap/: Prep.hs  Types.hs
