cabal-version:      3.4
name:               codebooks
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Klebinger
maintainer:         klebinger.andreas@gmx.at
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        MyLib,
        Example
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0
        , containers
        , hashable
        , fgl
    hs-source-dirs:   lib
    default-language: GHC2021

executable codebooks
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        codebooks

    hs-source-dirs:   app
    default-language: GHC2021
